# midi-gnerator-api

./: .gitignore  README.md  docker-compose.yml  settings.toml
backend/: Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  main.py  repositories.py  schemas.py
backend/app/api/: healthcheck.py  midi_generate.py
backend/app/config/: __init__.py  app.py  database.py
backend/app/models/: __init__.py  midi_generations.py
backend/app/services/: claude_client.py  midi_builder.py  storage.py
shared/: pyproject.toml
shared/shared/: __init__.py  database.py  s3.py
