[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared infrastructure for internal applications"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "boto3>=1.34",
    "botocore>=1.34",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]